# cc-uv-plugin

./: .mcp.json  README.md
.claude/: CLAUDE.md  settings.json
.claude-plugin/: plugin.json
.claude/commands/: uv-ci.md  uv-run.md
commands/: uv-add.md  uv-check.md  uv-init.md  uv-lint.md  uv-test.md  uv-typecheck.md
hooks/: session-init.sh
mcp/: pyproject.toml  server.py
