[project]
name = "cc-uv-mcp"
version = "0.1.0"
description = "MCP server for uv Python package manager integration with Claude Code"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
cc-uv-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
